# bookmark-content-processor

./: .gitignore  CLAUDE.md  README.md  api.py  bookmarks.db  database.py  embeddings.py  generate_icons.py  list_bookmarks.txt  main.py  pyproject.toml  search.html  test.ipynb
.claude/: settings.json
.claude/hooks/: remind_api_docs.py
app/: api.py  bookmarks_import.py  deleted_db.py  embeddings.py  request_log.py
docs/: API_AND_EXTENSION.md  GUIDE.md
extension/: popup.html  popup.js
extension-chrome/: content_script.js  manifest.json  popup.html  popup.js
extension-firefox/: background.js  manifest.json  popup.js
launchd/: com.bookmark-processor.plist
tests/: test_api.py  test_bookmarks_import.py
ui/: search.html
