[project]
name = "llm-links-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy==2.1.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "trafilatura>=2.0.0",
    "transformers>=4.52.3",
    "typer>=0.15.2",
]
